--- a/Test/TestPage.xaml
+++ b/Test/TestPage.xaml
@@ -1,14 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<Window
-    x:Class="StockApp.MainWindow"
+<Page
+    x:Class="StockApp.Test.TestPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:StockApp"
+    xmlns:local="using:StockApp.Test"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d"
-    Title="StockApp">
+    Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
 
-    <Frame x:Name="rootFrame" NavigationFailed="OnNavigationFailed"></Frame>
-
-</Window>
+    <Grid>
+        <TextBox Text="Hello There!"></TextBox>
+    </Grid>
+</Page>
