--- a/App.xaml
+++ b/App.xaml
@@ -3,7 +3,8 @@
     x:Class="StockApp.App"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:StockApp">
+    xmlns:local="using:StockApp"
+    xmlns:converters="using:StockNewsPage.Converters">
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
@@ -11,6 +12,15 @@
                 <!-- Other merged dictionaries here -->
             </ResourceDictionary.MergedDictionaries>
             <!-- Other app resources here -->
+            <!-- Converters -->
+            <converters:BoolToVisibilityConverter x:Key="BoolToVisibilityConverter" />
+            <converters:ReadStatusToFontWeightConverter x:Key="ReadStatusToFontWeightConverter" />
+            <converters:DateTimeToStringConverter x:Key="DateTimeToStringConverter" />
+            <converters:BoolToStringConverter x:Key="BoolToStringConverter" />
+            <converters:StringToVisibilityConverter x:Key="StringToVisibilityConverter" />
+            <converters:BoolToInverseVisibilityConverter x:Key="BoolToInverseVisibilityConverter" />
+            <converters:StatusToApproveVisibilityConverter x:Key="StatusToApproveVisibilityConverter" />
+            <converters:StatusToRejectVisibilityConverter x:Key="StatusToRejectVisibilityConverter" />
         </ResourceDictionary>
     </Application.Resources>
 </Application>
