--- a/StocksHomepage/View/HomepageView.xaml
+++ b/StocksHomepage/View/HomepageView.xaml
@@ -7,19 +7,24 @@
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:model="using:StocksHomepage.Model"
+    xmlns:viewModel="using:StocksHomepage.ViewModel"
     mc:Ignorable="d">
 
+    <Page.DataContext>
+        <viewModel:HomepageViewModel/>
+    </Page.DataContext>
+    
     <!-- Main layout -->
     <ScrollViewer VerticalScrollBarVisibility="Auto">
         <StackPanel Spacing="15">
 
             <!-- Navigation bar -->
             <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" Spacing="15">
-                <Button Content="News" Width="150" Click="GoToNews" />
-                <Button Content="Create Stock" Click="GoToCreateStock" Width="150"/>
-                <Button Content="History" Click="GoToHistory" Width="150"/>
-                <Button Content="Profile" Click="GoToProfile" Width="150"/>
-                <Button Content="Store" Click="GoToStore" Width="150"/>
+                <Button Content="News" Width="150"/>
+                <Button Content="Create Stock" Width="150"/>
+                <Button Content="History" Width="150"/>
+                <Button Content="Profile" Width="150"/>
+                <Button Content="Store" Width="150"/>
             </StackPanel>
 
             <!-- Search & Sorting -->
@@ -32,8 +37,8 @@
                     <!-- Dropdown width setter -->
                 </Grid.ColumnDefinitions>
 
-                <TextBox x:Name="SearchBox" PlaceholderText="Search stocks..." Grid.Column="0" HorizontalAlignment="Stretch" Margin="0,0,10,0" TextChanged="SearchBox_TextChanged"/>
-                <ComboBox x:Name="SortDropdown" Grid.Column="1" HorizontalAlignment="Left" SelectionChanged="SortDropdown_SelectionChanged">
+                <TextBox x:Name="SearchBox" PlaceholderText="Search stocks..." Text="{Binding SearchQuery, Mode=TwoWay}" Grid.Column="0" HorizontalAlignment="Stretch" Margin="0,0,10,0" TextChanged="SearchBox_TextChanged"/>
+                <ComboBox x:Name="SortDropdown" SelectedItem="{Binding SelectedSortOption, Mode=TwoWay}" Grid.Column="1" HorizontalAlignment="Left" SelectionChanged="SortDropdown_SelectionChanged">
                     <ComboBoxItem Content="Sort by Name"/>
                     <ComboBoxItem Content="Sort by Price"/>
                     <ComboBoxItem Content="Sort by Change"/>
@@ -54,7 +59,7 @@
                 </ListViewItem>
             </ListView>
             <!-- Binding Favorite Stocks as ListView items -->
-            <ListView x:Name="FavoritesList">
+            <ListView x:Name="FavoritesList" ItemsSource="{Binding FilteredFavoriteStocks}">
                 <ListView.ItemTemplate>
                     <DataTemplate x:DataType="model:Stock">
                         <StackPanel Orientation="Horizontal" Spacing="20">
@@ -82,7 +87,7 @@
                 </ListViewItem>
             </ListView>
             <!-- Binding All Stocks as ListView items -->
-            <ListView x:Name="StocksList">
+            <ListView x:Name="StocksList" ItemsSource="{Binding FilteredAllStocks}">
                 <ListView.ItemTemplate>
                     <DataTemplate x:DataType="model:Stock">
                         <StackPanel Orientation="Horizontal" Spacing="20">
