--- a/CreateStock/View/CreateStockPage.xaml
+++ b/CreateStock/View/CreateStockPage.xaml
@@ -6,16 +6,17 @@
     xmlns:local="using:CreateStock"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    mc:Ignorable="d">
+    mc:Ignorable="d"
+    Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
 
-    <Grid x:Name="RootGrid" Background="#A9A9A9" Padding="20" HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
+    <Grid x:Name="RootGrid" HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
 
         <Button Content="← GO BACK"
                 HorizontalAlignment="Right"
                 VerticalAlignment="Top"
                 Margin="0,20,20,0"
                 Padding="12,6"
-                Background="Transparent"
+                Background="#B0B0B0"
                 Foreground="Black"
                 FontSize="14"
                 BorderThickness="1"
@@ -28,7 +29,7 @@
                        FontFamily="Arial Black"
                        FontWeight="Bold"
                        HorizontalAlignment="Center"
-                       Foreground="Black"/>
+                       Foreground="White"/>
 
             <!-- Stock Name -->
             <TextBox Text="{Binding StockName, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" 
@@ -62,8 +63,8 @@
                 HorizontalAlignment="Center"
                 VerticalAlignment="Center"
                 Padding="12,6"
-                Background="Black"
-                Foreground="White"
+                Background="#B0B0B0"
+                Foreground="Black"
                 FontSize="16"
                 CornerRadius="5"
                 IsEnabled="{Binding IsAdmin}" />
