--- a/Alerts/AlertWindow.xaml
+++ b/Alerts/AlertWindow.xaml
@@ -14,6 +14,7 @@
                 <GradientStop Color="LightSkyBlue" Offset="0.0" />
                 <GradientStop Color="RoyalBlue" Offset="1.0" />
             </LinearGradientBrush>
+        </Grid.Background>
 
         <!-- Grid layout with Rows and Columns -->
         <Grid.RowDefinitions>
