--- a/StocksHomepage/View/HomepageView.xaml
+++ b/StocksHomepage/View/HomepageView.xaml
@@ -67,7 +67,7 @@
                             <TextBlock Text="{x:Bind Name}" Width="450"/>
                             <TextBlock Text="{x:Bind Price}" Width="200"/>
                             <TextBlock Text="{x:Bind Change}" Foreground="{x:Bind ChangeColor}" Width="200"/>
-                            <Button Content="★" Width="100" Click="FavoriteButton_Click" Tag="{x:Bind}"/>
+                            <Button Content="★" Width="100" Click="FavoriteButton_Click" IsEnabled="{Binding IsGuestUser}" Tag="{x:Bind}"/>
                         </StackPanel>
                     </DataTemplate>
                 </ListView.ItemTemplate>
@@ -95,7 +95,7 @@
                             <TextBlock Text="{x:Bind Name}" Width="450"/>
                             <TextBlock Text="{x:Bind Price}" Width="200"/>
                             <TextBlock Text="{x:Bind Change}" Foreground="{x:Bind ChangeColor}" Width="200"/>
-                            <Button Content="{x:Bind FavoriteStar}" Width="100" Click="FavoriteButton_Click" Tag="{x:Bind}"/>
+                            <Button Content="{x:Bind FavoriteStar}" Width="100" Click="FavoriteButton_Click" IsEnabled="{Binding IsGuestUser}" Tag="{x:Bind}"/>
                         </StackPanel>
                     </DataTemplate>
                 </ListView.ItemTemplate>
