--- a/GemStore/GemStoreWindow.xaml
+++ b/GemStore/GemStoreWindow.xaml
@@ -65,7 +65,8 @@
                                         <TextBlock Text="{x:Bind GemAmount}" Foreground="White" FontSize="18" Grid.Column="1"/>
                                         <TextBlock Text="{x:Bind FormattedPrice}" Foreground="White" FontSize="18" Grid.Column="2"/>
                                         <TextBlock Text="{x:Bind ExpirationTimeFormatted}" Foreground="White" FontSize="18" Grid.Column="3"/>
-                                        <Button Content="BUY" Click="OnBuyClicked" CommandParameter="{Binding}" Background="#5f815f" Foreground="White" Width="75" Grid.Column="4"/>
+                                        <Button Content="BUY"
+                                                Click="OnBuyClicked" CommandParameter="{Binding}" Background="#5f815f" Foreground="White" Width="75" Grid.Column="4"/>
                                     </Grid>
                                 </Border>
                             </DataTemplate>
@@ -81,7 +82,8 @@
                 <TextBlock Text="100 Gems = 1€" Foreground="White" HorizontalAlignment="Center"/>
                 <TextBox x:Name="sellInput" PlaceholderText="Enter amount" Margin="0,5" Padding="10" 
                          Background="#1a4919" Foreground="White" HorizontalAlignment="Stretch"/>
-                <Button x:Name="sellButton" Content="SELL" Click="OnSellClicked" 
+                <Button x:Name="sellButton" Content="SELL"
+                        Click="OnSellClicked" 
                         Background="#1a4919" Foreground="White" HorizontalAlignment="Center" Width="150"/>
                 <TextBlock x:Name="errorLabel" Foreground="DarkRed" Visibility="Collapsed" HorizontalAlignment="Center"/>
             </StackPanel>
