--- a/Profile/UpdateProfilePage.xaml
+++ b/Profile/UpdateProfilePage.xaml
@@ -3,38 +3,42 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
 
-    <StackPanel Padding="50" Spacing="30" Background="#D6EFF8" BorderBrush="#02367B" BorderThickness="10">
+    <StackPanel Padding="50" Spacing="30" Background="#FFF5EE" BorderBrush="#FF69B4" BorderThickness="10">
 
         <!-- Header -->
-        <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" VerticalAlignment="Center" Spacing="150" Background="White" Padding="20" >
-        <Button Content="Back" Click="GoToProfilePage" Background="#A39FE1" CornerRadius="10" Foreground="White" Padding="10"/>
-        <TextBlock Text="Update Profile" FontSize="24" FontWeight="Bold" Foreground="#02367B"/>
+        <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" VerticalAlignment="Center" Spacing="150" Background="#FFF5EE" Padding="20" >
+            <Button Content="Back" Click="GoToProfilePage" Background="#A39FE1" CornerRadius="10" Foreground="#FFF5EE" Padding="10"/>
+            <TextBlock Text="Update Profile" FontSize="24" FontWeight="Bold" Foreground="#FF69B4"/>
         </StackPanel>
 
     <!-- Profile Update Section -->
-        <StackPanel HorizontalAlignment="Center" VerticalAlignment="Center" BorderThickness="4" BorderBrush="#02367B" Spacing="20" Padding="20" Background="#8fd3fe" CornerRadius="10">
+        <StackPanel HorizontalAlignment="Center" VerticalAlignment="Center" BorderThickness="4" BorderBrush="#770737" Spacing="20" Padding="20" Background="#FFB6C1" CornerRadius="10">
 
             <StackPanel Orientation="Horizontal" HorizontalAlignment="Left" Spacing="15">
-                <TextBlock Text="Image:" FontSize="16" Foreground="#02367B"/>
+                <TextBlock Text="Image:" FontSize="16" Foreground="#770737"/>
                 <TextBox x:Name="ImageInput" Width="200" PlaceholderText="New image..."/>
             </StackPanel>
 
             <StackPanel Orientation="Horizontal" HorizontalAlignment="Left" Spacing="15">
-                <TextBlock Text="Username:" FontSize="16" Foreground="#02367B"/>
+                <TextBlock Text="Username:" FontSize="16" Foreground="#770737"/>
                 <TextBox x:Name="UsernameInput" Width="200" PlaceholderText="New username..."/>
             </StackPanel>
 
             <StackPanel Orientation="Horizontal" HorizontalAlignment="Left" Spacing="15">
-                <TextBlock Text="Description:" FontSize="16" Foreground="#02367B"/>
+                <TextBlock Text="Description:" FontSize="16" Foreground="#770737"/>
                 <TextBox x:Name="DescriptionInput" Width="200" PlaceholderText="New description..."/>
             </StackPanel>
 
             <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" Spacing="15">
-                <CheckBox x:Name="MyCheckBox" Content="Hidden profile" FontSize="16" Foreground="#02367B"/>
+                <CheckBox x:Name="MyDescriptionCheckBox" Content="Clear Description" FontSize="16" Foreground="#770737"/>
+            </StackPanel>
+
+            <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" Spacing="15">
+                <CheckBox x:Name="MyCheckBox" Content="Hidden profile" FontSize="16" Foreground="#770737"/>
             </StackPanel>
 
             <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
-                <Button Content="Update" CornerRadius="10" Name="UpdateButton" Click="UpdateUserProfile" Background="#02367B" Foreground="White"/>
+                <Button Content="Update" CornerRadius="10" Name="UpdateButton" Click="UpdateUserProfile" Background="#FF69B4" Foreground="#FFF5EE"/>
             </StackPanel>
 
         </StackPanel>
@@ -42,7 +46,7 @@
         <!-- Admin Section -->
         <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" Spacing="15">
             <TextBox x:Name="PasswordTry" Width="200" PlaceholderText="Enter password..."/>
-            <Button Content="Become ADMIN" Click="GetAdminPassword" Background="#02367B" Foreground="White" CornerRadius="10"/>
+            <Button Content="Become ADMIN" Click="GetAdminPassword" Background="#FF69B4" Foreground="White" CornerRadius="10"/>
         </StackPanel>
 
     </StackPanel>
