--- a/StocksHomepage/View/HomepageView.xaml
+++ b/StocksHomepage/View/HomepageView.xaml
@@ -18,7 +18,10 @@
     <ScrollViewer VerticalScrollBarVisibility="Auto">
         <StackPanel Spacing="15">
 
-            <!-- Navigation bar -->
+            <!-- <Button Content="Create Profile" Width="150" Visibility="{Binding GuestButtonVisibility}"/> -->
+
+
+    <!-- Navigation bar -->
             <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" Spacing="15">
                 <Button Content="News" Width="150"/>
                 <Button Content="Create Stock" Width="150"/>
@@ -54,7 +57,7 @@
                         <TextBlock Text="Symbol" FontSize="16" FontWeight="Light" Width="100"/>
                         <TextBlock Text="Name" FontSize="16" FontWeight="Light" Width="450"/>
                         <TextBlock Text="Price" FontSize="16" FontWeight="Light" Width="200"/>
-                        <TextBlock Text="% Change" FontSize="16" FontWeight="Light" Width="200"/>
+                        <TextBlock Text="Change" FontSize="16" FontWeight="Light" Width="200"/>
                     </StackPanel>
                 </ListViewItem>
             </ListView>
@@ -82,7 +85,7 @@
                         <TextBlock Text="Symbol" FontSize="16" FontWeight="Light" Width="100"/>
                         <TextBlock Text="Name" FontSize="16" FontWeight="Light" Width="450"/>
                         <TextBlock Text="Price" FontSize="16" FontWeight="Light" Width="200"/>
-                        <TextBlock Text="% Change" FontSize="16" FontWeight="Light" Width="200"/>
+                        <TextBlock Text="Change" FontSize="16" FontWeight="Light" Width="200"/>
                     </StackPanel>
                 </ListViewItem>
             </ListView>
