--- a/Profile/UpdateProfilePage.xaml
+++ b/Profile/UpdateProfilePage.xaml
@@ -3,77 +3,49 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
 
-    <StackPanel Padding="50" Spacing="30">
+    <StackPanel Padding="50" Spacing="30" Background="#FFF5EE" BorderBrush="#FF69B4" BorderThickness="10">
 
-        <Popup x:Name="MyPopupAdmin" IsLightDismissEnabled="True" HorizontalAlignment="Center">
-            <Border Width="350" Height="250" Padding="20" CornerRadius="10" BorderBrush="Black" BorderThickness="1">
-                <StackPanel Spacing="30" Padding="50" HorizontalAlignment="Center" VerticalAlignment="Center">
-
-                    <TextBlock Text="You are now ADMIN!" FontSize="16" HorizontalAlignment="Center"/>
-                    <Button Content="Close" Click="ClosePopupAdmin"/>
-
-                </StackPanel>
-            </Border>
-        </Popup>
-
-        <Popup x:Name="MyPopupAdminNOT" IsLightDismissEnabled="True" HorizontalAlignment="Center">
-            <Border Width="350" Height="250" Padding="20" CornerRadius="10" BorderBrush="Black" BorderThickness="1">
-                <StackPanel Spacing="30" Padding="50" HorizontalAlignment="Center" VerticalAlignment="Center">
-
-                    <TextBlock Text="Incorrect Password!!" FontSize="16" HorizontalAlignment="Center"/>
-                    <Button Content="Close" Click="ClosePopupAdminNOT"/>
-
-                </StackPanel>
-            </Border>
-        </Popup>
-
-        <Popup x:Name="MyPopupUpdate" IsLightDismissEnabled="True" HorizontalAlignment="Center">
-            <Border Width="350" Height="250" Padding="20" CornerRadius="10" BorderBrush="Black" BorderThickness="1">
-                <StackPanel Spacing="30" Padding="50" HorizontalAlignment="Center" VerticalAlignment="Center">
-
-                    <TextBlock Text="Incorrect input!!" FontSize="16" HorizontalAlignment="Center"/>
-                    <Button Content="Close" Click="ClosePopUpUpdate"/>
-
-                </StackPanel>
-            </Border>
-        </Popup>
-
-        <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" VerticalAlignment="Center" Spacing="300">
-            <Button Content="Back" HorizontalAlignment="Center" Click="GoToProfilePage"/>
-            <TextBlock Text="Update Profile" FontSize="20" HorizontalAlignment="Center"/>
-            <TextBlock>.</TextBlock>
+        <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" VerticalAlignment="Center" Spacing="150" Background="#FFF5EE" Padding="20" >
+            <Button Content="Back" Click="GoToProfilePage" Background="#A39FE1" CornerRadius="10" Foreground="#FFF5EE" Padding="10"/>
+            <TextBlock Text="Update Profile" FontSize="24" FontWeight="Bold" Foreground="#FF69B4"/>
         </StackPanel>
 
-        <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" VerticalAlignment="Center" Spacing="20">
-            <TextBlock Text="image: " />
-            <TextBox x:Name="ImageInput" Width="200" PlaceholderText="New image..." />
-        </StackPanel>
+        <StackPanel HorizontalAlignment="Center" VerticalAlignment="Center" BorderThickness="4" BorderBrush="#770737" Spacing="20" Padding="20" Background="#FFB6C1" CornerRadius="10">
 
-        <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" VerticalAlignment="Center" Spacing="20">
-            <TextBlock Text="username: " />
-            <TextBox x:Name="UsernameInput" Width="200" PlaceholderText="New username..." />
-        </StackPanel>
-
-        <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" VerticalAlignment="Center" Spacing="20">
-            <TextBlock Text="description: " />
-            <TextBox x:Name="DescriptionInput" Width="200" PlaceholderText="New description..."/>
-        </StackPanel>
-
-        <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" VerticalAlignment="Center" Spacing="20">
-            <CheckBox x:Name="MyCheckBox" Content="Hidden profile " />
-
-
-        </StackPanel>
-        <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" VerticalAlignment="Center" Spacing="20">
-            <Button Content="Update"  CornerRadius="10" Name="UpdateButton" Click="UpdateUserProfile" />
+            <StackPanel Orientation="Horizontal" HorizontalAlignment="Left" Spacing="15">
+                <TextBlock Text="Image:" FontSize="16" Foreground="#770737"/>
+                <TextBox x:Name="ImageInput" Width="200" PlaceholderText="New image..."/>
             </StackPanel>
 
-        <StackPanel  Orientation="Horizontal" HorizontalAlignment="Center" VerticalAlignment="Center" Spacing="20">
-            <TextBox x:Name="PasswordTry" Width="200" PlaceholderText="password...." />
-            <Button Content="Become ADMIN" HorizontalAlignment="Center" Click="GetAdminPassword" />
+            <StackPanel Orientation="Horizontal" HorizontalAlignment="Left" Spacing="15">
+                <TextBlock Text="Username:" FontSize="16" Foreground="#770737"/>
+                <TextBox x:Name="UsernameInput" Width="200" PlaceholderText="New username..."/>
+            </StackPanel>
+
+            <StackPanel Orientation="Horizontal" HorizontalAlignment="Left" Spacing="15">
+                <TextBlock Text="Description:" FontSize="16" Foreground="#770737"/>
+                <TextBox x:Name="DescriptionInput" Width="200" PlaceholderText="New description..."/>
+            </StackPanel>
+
+            <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" Spacing="15">
+                <CheckBox x:Name="MyDescriptionCheckBox" Content="Clear Description" FontSize="16" Foreground="#770737"/>
+            </StackPanel>
+
+            <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" Spacing="15">
+                <CheckBox x:Name="MyCheckBox" Content="Hidden profile" FontSize="16" Foreground="#770737"/>
+            </StackPanel>
+
+            <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
+                <Button Content="Update" CornerRadius="10" Name="UpdateButton" Click="UpdateUserProfile" Background="#FF69B4" Foreground="#FFF5EE"/>
+            </StackPanel>
+
         </StackPanel>
 
-
+        <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" Spacing="15">
+            <TextBox x:Name="PasswordTry" Width="200" PlaceholderText="Enter password..."/>
+            <Button Content="Become ADMIN" Click="GetAdminPassword" Background="#FF69B4" Foreground="White" CornerRadius="10"/>
+        </StackPanel>
 
     </StackPanel>
+
 </Page>
