--- a/StocksHomepage/View/HomepageView.xaml
+++ b/StocksHomepage/View/HomepageView.xaml
@@ -21,11 +21,11 @@
     <!-- Navigation bar -->
             <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" Spacing="15">
                 <Button Content="Create Profile" Width="150" Visibility="{Binding GuestButtonVisibility}" Click="CreateProfile_Click"/>
-                <Button Content="News" Width="150"/>
-                <Button Content="Create Stock" Width="150"/>
-                <Button Content="History" Width="150"/>
-                <Button Content="Profile" Width="150"/>
-                <Button Content="Store" Width="150"/>
+                <Button Content="News" Width="150" Click="GoToNews"/>
+                <Button Content="Create Stock" Width="150" Click="GoToCreateStock"/>
+                <Button Content="History" Width="150" Click="GoToHistory"/>
+                <Button Content="Profile" Width="150" Click="GoToProfile"/>
+                <Button Content="Store" Width="150" Click="GoToStore"/>
             </StackPanel>
 
             <!-- Search & Sorting -->
