stock page click

--- a/StocksHomepage/View/HomepageView.xaml
+++ b/StocksHomepage/View/HomepageView.xaml
@@ -63,13 +63,15 @@
             <ListView x:Name="FavoritesList" ItemsSource="{Binding FilteredFavoriteStocks}">
                 <ListView.ItemTemplate>
                     <DataTemplate x:DataType="model:HomepageStock">
-                        <StackPanel Orientation="Horizontal" Spacing="20">
-                            <TextBlock Text="{x:Bind Symbol}" FontSize="16" FontWeight="Bold" Width="100"/>
-                            <TextBlock Text="{x:Bind Name}" Width="450"/>
-                            <TextBlock Text="{x:Bind Price}" Width="200"/>
-                            <TextBlock Text="{x:Bind Change}" Foreground="{x:Bind ChangeColor}" Width="200"/>
-                            <Button Content="★" Width="100" Click="FavoriteButton_Click" Tag="{x:Bind}" IsEnabled="{Binding DataContext.CanModifyFavorites, ElementName=FavoritesList}"/>
-                        </StackPanel>
+                        <Grid Background="Transparent" Tapped="GoToStock">
+                            <StackPanel Orientation="Horizontal" Spacing="20">
+                                <TextBlock Text="{x:Bind Symbol}" FontSize="16" FontWeight="Bold" Width="100"/>
+                                <TextBlock Text="{x:Bind Name}" Width="450"/>
+                                <TextBlock Text="{x:Bind Price}" Width="200"/>
+                                <TextBlock Text="{x:Bind Change}" Foreground="{x:Bind ChangeColor}" Width="200"/>
+                                <Button Content="★" Width="100" Click="FavoriteButton_Click" Tag="{x:Bind}" IsEnabled="{Binding DataContext.CanModifyFavorites, ElementName=FavoritesList}"/>
+                            </StackPanel>
+                        </Grid>
                     </DataTemplate>
                 </ListView.ItemTemplate>
             </ListView>
@@ -91,13 +93,15 @@
             <ListView x:Name="StocksList" ItemsSource="{Binding FilteredAllStocks}">
                 <ListView.ItemTemplate>
                     <DataTemplate x:DataType="model:HomepageStock">
-                        <StackPanel Orientation="Horizontal" Spacing="20">
-                            <TextBlock Text="{x:Bind Symbol}" FontSize="16" FontWeight="Bold" Width="100"/>
-                            <TextBlock Text="{x:Bind Name}" Width="450"/>
-                            <TextBlock Text="{x:Bind Price}" Width="200"/>
-                            <TextBlock Text="{x:Bind Change}" Foreground="{x:Bind ChangeColor}" Width="200"/>
-                            <Button Content="{x:Bind FavoriteStar}" Width="100" Click="FavoriteButton_Click" Tag="{x:Bind}" IsEnabled="{Binding DataContext.CanModifyFavorites, ElementName=FavoritesList}"/>
-                        </StackPanel>
+                        <Grid Background="Transparent" Tapped="GoToStock">
+                            <StackPanel Orientation="Horizontal" Spacing="20">
+                                <TextBlock Text="{x:Bind Symbol}" FontSize="16" FontWeight="Bold" Width="100"/>
+                                <TextBlock Text="{x:Bind Name}" Width="450"/>
+                                <TextBlock Text="{x:Bind Price}" Width="200"/>
+                                <TextBlock Text="{x:Bind Change}" Foreground="{x:Bind ChangeColor}" Width="200"/>
+                                <Button Content="{x:Bind FavoriteStar}" Width="100" Click="FavoriteButton_Click" Tag="{x:Bind}" IsEnabled="{Binding DataContext.CanModifyFavorites, ElementName=FavoritesList}"/>
+                            </StackPanel>
+                        </Grid>
                     </DataTemplate>
                 </ListView.ItemTemplate>
             </ListView>
