--- a/StocksHomepage/View/HomepageView.xaml
+++ b/StocksHomepage/View/HomepageView.xaml
@@ -24,7 +24,7 @@
                 <Button Content="News" Width="150" Click="GoToNews"/>
                 <Button Content="Create Stock" Width="150" Click="GoToCreateStock"/>
                 <Button Content="History" Width="150" Click="GoToHistory"/>
-                <Button Content="Profile" Width="150" Click="GoToProfile"/>
+                <Button Content="Profile" Width="150" Click="GoToProfile" Visibility="{Binding ProfileButtonVisibility}"/>
                 <Button Content="Store" Width="150" Click="GoToStore"/>
             </StackPanel>
 
