make this barely functional code work

--- a/View/HomepageView.xaml
+++ b/View/HomepageView.xaml
@@ -5,9 +5,7 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:StocksHomepage"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    xmlns:model="using:StocksHomepage.Model"
-    xmlns:viewModel="using:StocksHomepage.ViewModel"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" xmlns:viewModel="using:StockApp.ViewModel" xmlns:model="using:StockApp.Model"
     mc:Ignorable="d">
 
     <Page.DataContext>
