--- a/App.xaml
+++ b/App.xaml
@@ -4,7 +4,7 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:StockApp"
-    xmlns:converters="using:StockNewsPage.Converters">
+    xmlns:converters="using:StockApp.Converters">
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
