--- a/Page/GemStoreWindow.xaml
+++ b/Page/GemStoreWindow.xaml
@@ -1,8 +1,7 @@
 <Page
     x:Class="GemStore.GemStoreWindow"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:models="using:GemStore.Models">
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" xmlns:models="using:StockApp.Model">
 
     <Grid x:Name="rootGrid" Margin="20" Background="#081708">
         <Grid.RowDefinitions>
@@ -63,8 +62,9 @@
                                         </Grid.ColumnDefinitions>
                                         <TextBlock Text="{x:Bind Title}" Foreground="White" FontSize="18" Grid.Column="0"/>
                                         <TextBlock Text="{x:Bind GemAmount}" Foreground="White" FontSize="18" Grid.Column="1"/>
-                                        <TextBlock Text="{x:Bind FormattedPrice}" Foreground="White" FontSize="18" Grid.Column="2"/>
-                                        <TextBlock Text="{x:Bind ExpirationTimeFormatted}" Foreground="White" FontSize="18" Grid.Column="3"/>
+                                        <!-- FIXME: formatted price is not binding correctly, it is in the service but this is expecting it to be in the model -->
+                                        <!--<TextBlock Text="{x:Bind FormattedPrice}" Foreground="White" FontSize="18" Grid.Column="2"/>
+                                        <TextBlock Text="{x:Bind ExpirationTimeFormatted}" Foreground="White" FontSize="18" Grid.Column="3"/>-->
                                         <Button Content="BUY"
                                                 Click="OnBuyClicked" CommandParameter="{Binding}" Background="#5f815f" Foreground="White" Width="75" Grid.Column="4"/>
                                     </Grid>
