--- a/Page/StockPage.xaml
+++ b/Page/StockPage.xaml
@@ -22,7 +22,7 @@
         </Grid.RowDefinitions>
 
         <StackPanel Grid.Row="0" Orientation="Horizontal" Height="60" HorizontalAlignment="Stretch" Background="#2D2D2D">
-            <Button Content="Return" Width="100" Height="40" Margin="10" Click="ReturnButton_Click" VerticalAlignment="Center" />
+            <Button Content="Return" Width="100" Height="40" Margin="10" Click="ReturnButtonClick" VerticalAlignment="Center" />
             <TextBlock x:Name="StockSymbol" Text="{Binding StockSymbol}" FontSize="16" Margin="0,0,10,0" Foreground="White" VerticalAlignment="Center" />
             <TextBlock x:Name="StockName" Text="{Binding StockName}" FontSize="16" Foreground="White" VerticalAlignment="Center" />
             <Button Command="{x:Bind command}" x:Name="AuthorButton" Content="Author" Width="100" Height="40" Margin="10"  VerticalAlignment="Center" />
