--- a/View/HomepageView.xaml
+++ b/View/HomepageView.xaml
@@ -9,7 +9,7 @@
     mc:Ignorable="d">
 
     <Page.DataContext>
-        <viewModel:HomepageViewModel/>
+        <viewModel:HomePageViewModel/>
     </Page.DataContext>
     
     <!-- Main layout -->
@@ -18,7 +18,7 @@
 
     <!-- Navigation bar -->
             <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" Spacing="15">
-                <Button Content="Create Profile" Width="150" Visibility="{Binding GuestButtonVisibility}" Click="CreateProfile_Click"/>
+                <Button Content="Create Profile" Width="150" Visibility="{Binding GuestButtonVisibility}" Click="CreateProfileClick"/>
                 <Button Content="News" Width="150" Click="GoToNews"/>
                 <Button Content="Create Stock" Width="150" Click="GoToCreateStock"/>
                 <Button Content="History" Width="150" Click="GoToHistory"/>
@@ -36,8 +36,8 @@
                     <!-- Dropdown width setter -->
                 </Grid.ColumnDefinitions>
 
-                <TextBox x:Name="SearchBox" PlaceholderText="Search stocks..." Text="{Binding SearchQuery, Mode=TwoWay}" Grid.Column="0" HorizontalAlignment="Stretch" Margin="0,0,10,0" TextChanged="SearchBox_TextChanged"/>
-                <ComboBox x:Name="SortDropdown" SelectedItem="{Binding SelectedSortOption, Mode=TwoWay}" Grid.Column="1" HorizontalAlignment="Left" SelectionChanged="SortDropdown_SelectionChanged">
+                <TextBox x:Name="SearchBox" PlaceholderText="Search stocks..." Text="{Binding SearchQuery, Mode=TwoWay}" Grid.Column="0" HorizontalAlignment="Stretch" Margin="0,0,10,0" TextChanged="SearchBoxTextChanged"/>
+                <ComboBox x:Name="SortDropdown" SelectedItem="{Binding SelectedSortOption, Mode=TwoWay}" Grid.Column="1" HorizontalAlignment="Left" SelectionChanged="SortDropdownSelectionChanged">
                     <ComboBoxItem Content="Sort by Name"/>
                     <ComboBoxItem Content="Sort by Price"/>
                     <ComboBoxItem Content="Sort by Change"/>
@@ -66,7 +66,7 @@
                                 <TextBlock Text="{x:Bind Name}" Width="450"/>
                                 <TextBlock Text="{x:Bind Price}" Width="200"/>
                                 <TextBlock Text="{x:Bind Change}" Foreground="{x:Bind ChangeColor}" Width="200"/>
-                                <Button Content="★" Width="100" Click="FavoriteButton_Click" Tag="{x:Bind}" IsEnabled="{Binding DataContext.CanModifyFavorites, ElementName=FavoritesList}"/>
+                                <Button Content="★" Width="100" Click="FavoriteButtonClick" Tag="{x:Bind}" IsEnabled="{Binding DataContext.CanModifyFavorites, ElementName=FavoritesList}"/>
                             </StackPanel>
                     </DataTemplate>
                 </ListView.ItemTemplate>
@@ -94,7 +94,7 @@
                                 <TextBlock Text="{x:Bind Name}" Width="450"/>
                                 <TextBlock Text="{x:Bind Price}" Width="200"/>
                                 <TextBlock Text="{x:Bind Change}" Foreground="{x:Bind ChangeColor}" Width="200"/>
-                                <Button Content="{x:Bind FavoriteStar}" Width="100" Click="FavoriteButton_Click" Tag="{x:Bind}" IsEnabled="{Binding DataContext.CanModifyFavorites, ElementName=FavoritesList}"/>
+                                <Button Content="{x:Bind FavoriteStar}" Width="100" Click="FavoriteButtonClick" Tag="{x:Bind}" IsEnabled="{Binding DataContext.CanModifyFavorites, ElementName=FavoritesList}"/>
                             </StackPanel>
                     </DataTemplate>
                 </ListView.ItemTemplate>
