--- a/View/NewsArticleView.xaml
+++ b/View/NewsArticleView.xaml
@@ -95,7 +95,7 @@
                             <ItemsRepeater.ItemTemplate>
                                 <DataTemplate x:DataType="x:String">
                                     <Button Content="{x:Bind}" 
-                                            Click="RelatedStock_Click"
+                                            Click="RelatedStockClick"
                                             Margin="0,0,8,8" 
                                             Padding="8,4"
                                             Background="{ThemeResource AccentButtonBackground}"
